[tool.poetry]
name = "garden-yolo"
version = "0.1.0"
description = ""
authors = ["Nathaniel Hartmann <hartmannlight@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
ultralytics = ">=8.3.91,<9.0.0"
torch = ">=2.6.0,<3.0.0"
torchvision = ">=0.21.0,<0.22.0"
torchaudio = ">=2.6.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
