[tool.poetry]
name = "garden-yolo"
version = "0.1.0"
description = ""
authors = ["Nathaniel Hartmann <hartmannlight@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
opencv-python = "^4.11.0.86"
numpy = "^2.2.5"
requests = "^2.32.3"
ultralytics = "^8.3.127"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
